# osmo-msc

./: .gitignore  .gitreview  Makefile.am  README  README.md  README.vty-tests  TODO-RELEASE  configure.ac  git-version-gen  osmo-msc.pc.in  osmoappdesc.py
contrib/: Makefile.am  esme_mslookup.py  jenkins.sh  osmo-msc.spec  osmo-msc.spec.in
contrib/systemd/: Makefile.am  osmo-msc.service
debian/: changelog  control  copyright  osmo-msc-doc.install  osmo-msc.install  osmo-msc.service  postinst  rules
doc/: Makefile.am  interMSC_HO_GSUP_msgs.txt
doc/examples/: Makefile.am
doc/examples/osmo-bsc/: osmo-bsc.cfg
doc/examples/osmo-bsc_mgcp/: mgcp.cfg
doc/examples/osmo-bsc_nat/: osmo-bsc_nat.cfg
doc/examples/osmo-msc/: osmo-msc.cfg  osmo-msc_custom-sccp.cfg  osmo-msc_multi-cs7.cfg
doc/examples/osmo-sgsn/: osmo-sgsn-accept-all.cfg  osmo-sgsn.cfg
doc/manuals/: Makefile  Makefile.am  osmomsc-usermanual-docinfo.xml  osmomsc-usermanual.adoc  osmomsc-vty-reference.xml  regen_doc.sh
doc/manuals/chapters/: control.adoc  counters_generated.adoc  net.adoc  osmux_msc.adoc  overview.adoc  running.adoc  sgs.adoc
doc/manuals/images/: sgs-imsi_attach_lu.msc  sgs-mo_call_no_ps_ho.msc  sgs-mo_sms_idle.msc  sgs-mt_call_idle.msc  sgs-mt_sms_idle.msc
doc/manuals/vty/: msc_vty_additions.xml  msc_vty_reference.xml
doc/sequence_charts/: Makefile.am  amr_mode_set.txt  call_reestablishment.ladder  call_reestablishment.msc  inter_bsc_ho.msc  inter_msc_ho.msc  mncc_call_fsm.msc  mncc_fsm.msc  msc_log_to_ladder.py  voice_call_external_mncc.msc  voice_call_full.ladder  voice_call_full.msc  voice_call_internal_mncc.msc
include/: Makefile.am
include/openbsc/: Makefile.am  bsc_nat.h  gprs_sgsn.h  gsm_04_08.h  gsm_data.h  gsm_data_shared.h  gsm_subscriber.h  iu.h  iucs.h  iucs_ranap.h  mgcp_internal.h  osmo_msc.h  paging.h  sgsn.h  vlr.h
include/osmocom/: Makefile.am
include/osmocom/msc/: Makefile.am  a_iface.h  a_iface_bssap.h  a_reset.h  abis_nm.h  asci_gcr.h  asci_vty.h  bsc_api.h  bsc_msc.h  bsc_rll.h  bss.h  call_leg.h  cc_sdp.h  cell_id_list.h  codec_filter.h  codec_mapping.h  codec_sdp_cc_t9n.h  common_bsc.h  common_cs.h  csd_bs.h  csd_filter.h  db.h  debug.h  e1_config.h  e_link.h  gsm_04_08.h  gsm_04_11.h  gsm_04_11_gsup.h  gsm_04_14.h  gsm_04_80.h  gsm_09_11.h  gsm_data.h  gsm_data_shared.h  gsm_subscriber.h  gsup_client.h  gsup_client_mux.h  gtphub.h  iu_dummy.h  iucs.h  meas_feed.h  (+52 more)
include/osmocom/smpp/: Makefile.am  smpp.h  smpp_smsc.h
include/osmocom/vlr/: Makefile.am  vlr.h  vlr_sgs.h
src/: Makefile.am
src/gprs/: Makefile.am  gprs_gmm.c  gprs_sgsn.c  gprs_subscriber.c  sgsn_libgtp.c  sgsn_main.c  sgsn_vty.c
src/libbsc/: abis_rsl.c  bsc_api.c  bsc_init.c  bsc_vty.c  gsm_04_08_utils.c  handover_logic.c
src/libcommon/: Makefile.am  common_vty.c  debug.c  gsm_data.c  gsm_data_shared.c  gsm_subscriber_base.c  gsup_client.c  gsup_test_client.c  oap_client.c  socket.c  talloc_ctx.c
src/libcommon-cs/: Makefile.am  a_reset.c  common_cs.c  common_cs_vty.c
src/libfilter/: bsc_msg_acc.c
src/libgsupclient/: Makefile.am  gsup_client.c  gsup_test_client.c  oap_client.c
src/libiu/: iu_vty.c
src/libmgcp/: mgcp_network.c  mgcp_protocol.c
src/libmsc/: Makefile.am  a_iface.c  a_iface_bssap.c  a_reset.c  asci_gcr.c  asci_vty.c  auth.c  call_leg.c  cc_sdp.c  cell_id_list.c  codec_filter.c  codec_mapping.c  codec_sdp_cc_t9n.c  csd_bs.c  csd_filter.c  ctrl_commands.c  db.c  e_link.c  gsm_04_08.c  gsm_04_08_cc.c  gsm_04_11.c  gsm_04_11_gsup.c  gsm_04_14.c  gsm_04_80.c  gsm_09_11.c  gsm_subscriber.c  gsup_client_mux.c  iu_dummy.c  iucs.c  iucs_ranap.c  meas_feed.c  mncc.c  mncc_builtin.c  mncc_call.c  mncc_sock.c  msc_a.c  msc_a_remote.c  msc_bcc.c  msc_ho.c  msc_i.c  (+41 more)
src/libsmpputil/: Makefile.am  smpp_msc.c  smpp_smsc.c  smpp_utils.c  smpp_vty.c
src/libvlr/: Makefile.am  vlr.c  vlr_access_req_fsm.c  vlr_access_req_fsm.h  vlr_auth_fsm.c  vlr_auth_fsm.h  vlr_core.h  vlr_lu_fsm.c  vlr_lu_fsm.h  vlr_sgs.c  vlr_sgs_fsm.c  vlr_sgs_fsm.h
src/osmo-bsc/: Makefile.am  osmo_bsc_bssap.c  osmo_bsc_main.c  osmo_bsc_vty.c
src/osmo-bsc_nat/: Makefile.am  bsc_mgcp_utils.c  bsc_nat_ctrl.c  bsc_nat_vty.c  bsc_ussd.c
src/osmo-msc/: Makefile.am  msc_main.c
src/osmo-nitb/: bsc_hack.c
src/utils/: Makefile.am  meas_db.c  meas_json.c  meas_pcap2db.c  meas_udp2db.c  meas_vis.c  smpp_mirror.c
tests/: Makefile.am  atlocal.in  codecs.vty  ctrl_test_runner.py  smpp_test_runner.py  stubs.c  test_neighbor_ident.vty  test_nodes.vty  testsuite.at  vty_test_runner.py
tests/bsc/: Makefile.am
tests/bsc-nat/: Makefile.am
tests/bsc-nat-trie/: Makefile.am
tests/channel/: channel_test.c  channel_test.ok
tests/csd/: Makefile.am  csd_test.c  csd_test.ok
tests/db/: Makefile.am  db_test.c
tests/db_sms/: Makefile.am  db_sms_test.c  db_sms_test.err  db_sms_test.ok
tests/gsm0408/: Makefile.am  gsm0408_test.c
tests/libiudummy/: iudummy.c
tests/mgcp/: Makefile.am
tests/mncc/: Makefile.am  mncc_test.c  mncc_test.err  mncc_test.ok
tests/msc_vlr/: Makefile.am  msc_vlr_test_authen_reuse.c  msc_vlr_test_authen_reuse.err  msc_vlr_test_authen_reuse.ok  msc_vlr_test_call.c  msc_vlr_test_call.err  msc_vlr_test_gsm_authen.c  msc_vlr_test_gsm_authen.err  msc_vlr_test_gsm_authen.err.err  msc_vlr_test_gsm_ciph.c  msc_vlr_test_gsm_ciph.err  msc_vlr_test_hlr_reject.c  msc_vlr_test_hlr_reject.err  msc_vlr_test_hlr_timeout.c  msc_vlr_test_hlr_timeout.err  msc_vlr_test_ms_timeout.c  msc_vlr_test_ms_timeout.err  msc_vlr_test_no_authen.c  msc_vlr_test_no_authen.err  msc_vlr_test_reject_concurrency.c  msc_vlr_test_reject_concurrency.err  msc_vlr_test_rest.c  msc_vlr_test_rest.err  msc_vlr_test_ss.c  msc_vlr_test_ss.err  msc_vlr_test_umts_authen.c  msc_vlr_test_umts_authen.err  msc_vlr_tests.c  msc_vlr_tests.h  stubs.h
tests/sdp_msg/: Makefile.am  sdp_msg_test.c  sdp_msg_test.ok
tests/sgsn/: Makefile.am
tests/smpp/: Makefile.am  smpp_test.c  smpp_test.ok
tests/sms_queue/: Makefile.am  sms_queue_test.c  sms_queue_test.err  sms_queue_test.ok
tests/sms_storage/: Makefile.am  sms_storage_test.c
(+1 files in other folders)
